--- a/package.json
+++ b/package.json
@@ -6,17 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "@clerk/nextjs": "^5.0.0",
+    "@supabase/supabase-js": "^2.43.4",
+    "@upstash/redis": "^1.31.3",
+    "@upstash/ratelimit": "^2.0.1",
+    "framer-motion": "^11.2.10",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1",
+    "razorpay": "^2.9.2",
+    "resend": "^3.3.0",
+    "qrcode": "^1.5.3",
+    "qrcode.react": "^3.1.0",
+    "@google/generative-ai": "^0.15.0",
+    "recharts": "^2.12.7",
+    "lucide-react": "^0.390.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
+    "date-fns": "^3.6.0",
+    "react-hot-toast": "^2.4.1",
+    "zustand": "^4.5.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "next": "14.2.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.6",
-    "tailwindcss": "^4"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "tailwindcss": "^3.4.4",
+    "postcss": "^8",
+    "autoprefixer": "^10.0.1"
   }
 }
