--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.0",
+    "@clerk/themes": "^2.4.55",
+    "@google/generative-ai": "^0.15.0",
     "@supabase/supabase-js": "^2.43.4",
-    "@upstash/redis": "^1.31.3",
     "@upstash/ratelimit": "^2.0.1",
+    "@upstash/redis": "^1.31.3",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "razorpay": "^2.9.2",
-    "resend": "^3.3.0",
+    "lucide-react": "^0.390.0",
+    "next": "14.2.4",
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
-    "@google/generative-ai": "^0.15.0",
-    "recharts": "^2.12.7",
-    "lucide-react": "^0.390.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0",
-    "date-fns": "^3.6.0",
-    "react-hot-toast": "^2.4.1",
-    "zustand": "^4.5.4",
+    "razorpay": "^2.9.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "next": "14.2.4"
+    "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
+    "recharts": "^2.12.7",
+    "resend": "^3.3.0",
+    "tailwind-merge": "^2.3.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "tailwindcss": "^3.4.4",
     "postcss": "^8",
-    "autoprefixer": "^10.0.1"
+    "tailwindcss": "^3.4.4"
   }
 }
