--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.43.4",
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.31.3",
+    "@yudiel/react-qr-scanner": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.18.2",
